# nm_lib

./: .pre-commit-config.yaml  README.md  _typos.toml  pyproject.toml  ruff.toml  tox.ini
.github/workflows/: main.yml  test.yml
nm_lib/: __init__.py  nm_lib.py  nm_lib_ex_1.py  nm_lib_ex_2.py  nm_lib_ex_3.py  nm_lib_ex_4.py  nm_lib_ex_5.py  nm_lib_ex_6.py  nm_lib_project.py  version.py
nm_lib/nm_ex/: nm_lib_ex_1.py  nm_lib_ex_2.py  nm_lib_ex_3.py  nm_lib_ex_4.py  nm_lib_ex_5.py  nm_lib_ex_6.py
