[build-system]
requires = [
  "setuptools",
  "setuptools_scm[toml]",
  "wheel",
]
build-backend = 'setuptools.build_meta'

[project]
name = "nm_lib"
dynamic = ["version"]
description = "A library for the mumerical method course"
readme = "README.rst"
requires-python = ">=3.10"
license = {file = "LICENSE.txt"}

authors = [
  {email = "jmsykora@seti.org"},
  {name = "Juan Martinez-Sykora"}
  ]

keywords = ["solar physics", "numerical methods"]

classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: BSD License",
  "Natural Language :: English",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Physics",
]

dependencies = [
  'numpy>=1.21.6',
  'scipy>=1.7.3',
]

[project.urls]
homepage = "https://example.com"
documentation = "https://readthedocs.org"
repository = "https://github.com"
changelog = "https://github.com/me/spam/blob/master/CHANGELOG.md"


[project.optional-dependencies]
all = ["nm_lib"]
tests = [
  'pytest-astropy',
  'pytest-loguru',
]
docs = [
  'sphinx',
  'sphinx-automodapi',
  'sphinx-changelog',
  'sphinx-gallery',
  'pydata-sphinx-theme',
]
dev = ["nm_lib[all,tests,docs]"]

[tool.setuptools_scm]
write_to = "nm_lib/_version.py"

[tool.setuptools]
include-package-data = true
platforms = ["any"]
provides = ["nm_lib"]
license-files = ["LICENSE.rst"]

[tool.setuptools.packages.find]
exclude = ["nm_lib._dev"]
namespaces = false

[tool.codespell]
ignore-words-list = "emiss,sav,"

[tool.towncrier]
    package = "nm_lib"
    filename = "CHANGELOG.rst"
    directory = "changelog/"
    title_format = "{version} ({project_date})"

    [[tool.towncrier.type]]
        directory = "breaking"
        name = "Breaking Changes"
        showcontent = true

    [[tool.towncrier.type]]
      directory = "deprecation"
      name = "Deprecations"
      showcontent = true

    [[tool.towncrier.type]]
      directory = "removal"
      name = "Removals"
      showcontent = true

    [[tool.towncrier.type]]
      directory = "feature"
      name = "New Features"
      showcontent = true

    [[tool.towncrier.type]]
      directory = "bugfix"
      name = "Bug Fixes"
      showcontent = true

    [[tool.towncrier.type]]
      directory = "doc"
      name = "Documentation"
      showcontent = true

    [[tool.towncrier.type]]
      directory = "trivial"
      name = "Internal Changes"
      showcontent = true
